--- a/src/components/NavComponent.css
+++ b/src/components/NavComponent.css
@@ -14,6 +14,8 @@
 
 .nav-item {
     margin: 0 15px;
+    display: flex;
+    align-items: center;
 }
 
 .nav-link {
@@ -22,6 +24,8 @@
     font-size: 1.2rem;
     padding: 0.5rem 1rem;
     transition: background-color 0.3s ease-in-out;
+    background-color: transparent;
+    border-radius: 50px;
 }
 
 .nav-link:hover {
